--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
                       <p><span class="title-s">Name: </span> <span>Adarsh Singh</span></p>
                       <p><span class="title-s">Profile: </span> <span>Data and ML Engineer</span></p>
                       <p><span class="title-s">Email: </span> <span>adarshs285@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+91 7977224566</span></p>
-                    </div>
+                      <p><span class="title-s">Phone: </span> <span>+91 7977224566</span>
+                        <br><br><br><br>
+                          <!-- Add the resume download button here -->
+                          <a href="path/to/your/resume.pdf" class="btn btn-primary" download>Download Resume</a>
+                      </p>
+                  </div>
                   </div>
                 </div>
                 <div class="skill-mf">
