--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                       <p><span class="title-s">Email: </span> <span>adarshs285@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>+91 7977224566</span>
                         <br><br><br><br>
-                          <!-- Add the resume download button here -->
-                          <a href="path/to/your/resume.pdf" class="btn btn-primary" download>Download Resume</a>
+                          
+                          <a href="" class="btn btn-primary" download>Download Resume</a>
                       </p>
                   </div>
                   </div>
